memo/memo/tests/fail-no-mutable-self.stderr
error: memoizable functions cannot have mutable self parameter
 --> tests/fail-no-mutable-self.rs:7:19
  |
7 |     fn memome<'a>(&mut self) {}
  |                   ^^^^^^^^^
