memo/memo/tests/fail-no-mutable-self.rs
use memo_with_references::memo;

struct Foo;

impl Foo {
    #[memo('a)]
    fn memome<'a>(&mut self) {}
}

fn main() {}
